# docx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml  test.yml
examples/: hello_world.rs  merge.rs  table.rs
src/: app.rs  comments.rs  content_type.rs  core.rs  docx.rs  error.rs  lib.rs  macros.rs  mail_merge.rs  rels.rs  schema.rs  web_settings.rs
src/document/: bidir.rs  body.rs  bookmark_end.rs  bookmark_start.rs  break.rs  comment_range.rs  comments.rs  date.rs  document.rs  drawing.rs  endnotes.rs  field_char.rs  footer.rs  footnotes.rs  grid_column.rs  header.rs  header_footer_reference.rs  hyperlink.rs  instrtext.rs  mod.rs  numbering.rs  paragraph.rs  run.rs  sdt.rs  sym.rs  tab.rs  table.rs  table_cell.rs  table_grid.rs  table_row.rs  text.rs  theme.rs
src/font_table/: charset.rs  family.rs  font.rs  mod.rs  pitch.rs
src/formatting/: bold.rs  borders.rs  character_property.rs  color.rs  dstrike.rs  fonts.rs  indent.rs  indent_level.rs  italics.rs  justification.rs  lang.rs  line_rule.rs  mod.rs  numbering_id.rs  numbering_property.rs  outline.rs  page_cols.rs  page_grid.rs  page_margin.rs  page_size.rs  paragraph_property.rs  section_property.rs  size.rs  spacing.rs  strike.rs  table_borders.rs  table_cell_property.rs  table_header.rs  table_indent.rs  table_justification.rs  table_margin.rs  table_property.rs  table_row_property.rs  table_width.rs  underline.rs  widow_control.rs
src/media/: mod.rs
src/settings/: mod.rs
src/styles/: default_style.rs  latent_style.rs  (+6 more)
tests/: integration_test.rs
validator/: validator.csproj
(+20 files in other folders)
