[package]
name = "docx-rust"
version = "0.1.5"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cstkingkey/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[dependencies]
derive_more = "0.99.17"
log = "0.4.14"
strong-xml = { version = "0.6.3", features = ["log"] }
zip = {version = "0.6", default-features = false, features = ["deflate"]}

[dev-dependencies]
env_logger = "0.10.0"
