[package]
name = "docx-rust"
version = "0.1.7"
authors = ["cstkingkey <cstkingkey@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cstkingkey/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[dependencies]
derive_more = "0.99.17"
log = "0.4.14"
hard-xml = "1.27.0"
zip = {version = "1.1.2", default-features = false, features = ["deflate"]}

[dev-dependencies]
env_logger = "0.11.3"
